# argonone

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  argonone-poweroff.service  argononed.service  polkit.rules  sysusers.conf
argonone-poweroff/: Cargo.toml
argonone-poweroff/src/: main.rs
argononed/: Cargo.toml
argononed/src/: edge_stream.rs  fan_control.rs  main.rs  power_button_stream.rs  temperature_stream.rs
