[workspace]
resolver = "3"
members = ["argononed", "argonone-poweroff"]

[workspace.dependencies]
env_logger             = "0.11.8" 
i2c-linux              = "0.1.2"
log                    = "0.4.27"
systemd-journal-logger = "2.2.2"
tokio                  = "1.47.1"

[workspace.package]
version = "1.1.0"