[package]
name = "argonone-poweroff"
version = "1.0.0"
edition = "2024"

[dependencies]
env_logger             = { workspace = true }
i2c-linux              = "0.1.2"
log                    = { workspace = true }
systemd-journal-logger = { workspace = true }
tokio                  = { workspace = true, features = ["full"] }
