[package]
name = "argonone-poweroff"
edition = "2024"
version.workspace = true

[dependencies]
env_logger             = { workspace = true }
i2c-linux              = { workspace = true }
log                    = { workspace = true }
systemd-journal-logger = { workspace = true }
tokio                  = { workspace = true, features = ["full"] }
