[package]
name    = "argononed"
version = "1.0.0"
edition = "2024"

[dependencies]
env_logger              = { workspace = true }
futures                = "0.3.31"
libgpiod               = "0.2.2"
log                    = { workspace = true }
systemd-journal-logger = { workspace = true }
system_shutdown        = "4.0.1"
tokio                  = { workspace = true, features = ["full"] }